# pydantic_ai_tutorials

./: README.md  example.env  pyproject.toml
Day_1/: 01-1_pydantic_ai_simple_groq.py  01-2_pydantic_ai_simple_local.py  README.md
Day_2/: 02-1_pydantic_ai_using_dependency_system_prompt.py  02-2_pydantic_ai_using_dependency_tools.py
Day_3/: 03-1_pydantic_ai_using_tools.py  03-2_pydantic_ai_using_langchain_tools.py
