[project]
name = "pydantic-ai-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo-search>=7.5.3",
    "langchain-community>=0.3.20",
    "prettytable>=3.14.0",
    "pydantic-ai[logfire]>=0.0.24",
    "python-dotenv>=1.0.1",
    "tabulate>=0.9.0",
    "tavily-python>=0.5.1",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.55",
]
